# timer

./: CMakeLists.txt  toolchain-avr.cmake
lib/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
lib/tm1638/: CMakeLists.txt  tm1638.c  tm1638.h
src/: CMakeLists.txt  main.c  motherboard.c  motherboard.h  scheduler.c  scheduler.h  timer.c  timer.h  tm1638.c  tm1638.h
test/: CMakeLists.txt  GenerateUnityMain.cmake  scheduler_test.c  tm1638_mock.h  tm1638_test.c
test/mock/: tm1638_mock.c
